# cc-obsidian-sync

./: CLAUDE.md  README.md  README.zh-CN.md  README.zh-TW.md  plan.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: export.md  log.md  run.md  setup.md  status.md  test.md  web.md
.claude-plugin/scripts/: cc-sync.py  dashboard.html
.claude-plugin/skills/cc-sync/: SKILL.md
commands/: export.md  log.md  run.md  setup.md
hooks/: hooks.json
scripts/: cc-sync.py
src/cc_obsidian_sync/: __init__.py  core.py
src/cc_obsidian_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cc_sync/: __init__.py  core.py
